# calendar_viewer

./: .gitignore  AGENTS.md  README.md  calendar_api.py  main.py  pyproject.toml
ai/tasks/done/: 20260604_Add_MCP_Server_functionality.md
src/: main.py  mcp_server.py
