[project]
name = "calendar-viewer"
version = "0.1.0"
description = "CLI and MCP server for reading Google Calendar events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "mcp>=1.0.0",
    "pytz>=2026.2",
]

[project.scripts]
calendar-export = "main:main"
calendar-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["calendar_api", "main", "mcp_server"]
